css/index.css
html,
body {
  position: relative;
  height: 100%;
}

body {
  background: #000000;
  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
  font-size: 14px;
  color: #000;
  margin: 0;
  padding: 0;
}

.swiper {
  width: 100%;
  height: 100%;
}

.swiper-slide {
  background-color: black;
  height: 100svh;
  width: 100vw;
  display: flex;
  justify-content: center;
  align-items: center;
}

.title-row {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 300;
  margin-top: 10px;
}

/* Close Button Styles */
.close-btn {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 28px;
  height: 28px;
  background-color: rgba(0, 0, 0, 0.3);
  border-radius: 50%;
  position: absolute;
  /* top: 9px; */
  left: 9px;
  cursor: pointer;
  border: none;
}

.close-btn::before,
.close-btn::after {
  content: "";
  position: absolute;
  width: 18px; /* Length of the lines */
  height: 2px; /* Thickness of the lines */
  background-color: white; /* Color of 'X' */
}

.close-btn::before {
  transform: rotate(45deg); /* First line of the 'X' */
}

.close-btn::after {
  transform: rotate(-45deg); /* Second line of the 'X' */
}

.title-row .close-btn,
.title-row .options-btn {
  position: absolute;
}

.pencil-title-row {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 28px;
  color: white;
}

.title-row .pencil {
  height: 18px;
  width: auto;
  margin-right: 2px;
  filter: drop-shadow(1px 1px 2px rgba(0, 0, 0, 0.5))
    drop-shadow(2px 2px 4px rgba(0, 0, 0, 0.3));
  cursor: pointer;
}

.title-row .add-new-caption {
  cursor: pointer;
}

.title-row .media-item-title {
  font-weight: 400;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  color: white;
  letter-spacing: 0.04rem;
  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5), 2px 2px 4px rgba(0, 0, 0, 0.3);
  margin-left: 10px;
  margin-right: 10px;
}

.options-btn {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 28px;
  height: 28px;
  background-color: rgba(0, 0, 0, 0.3);
  border-radius: 50%;
  position: absolute;
  right: 9px;
  cursor: pointer;
  border: none;
  gap: 0.158rem;
}

.dot {
  width: 4px;
  height: 4px;
  background-color: white;
  border-radius: 50%;
}

/* Bottom Footer */
.title-row-bottom {
  height: 60px;
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 300;
  margin-top: -18px;
}

.number-of-items-btn {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 0 2px;
  height: 28px;
  background-color: rgba(0, 0, 0, 0.3);
  border-radius: 14px;
  position: absolute;
  right: 9px;
  border: none;
}

.number-of-items-text {
  color: white;
  letter-spacing: 0.09rem;
  padding-right: 8px;
  padding-left: 8px;
  text-shadow: 0px 0px 5px rgba(0, 0, 0, 0.25);
  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5), 2px 2px 4px rgba(0, 0, 0, 0.3);
  text-shadow: 0px 0px 5px rgba(0, 0, 0, 0.25);
}

.landscape-img {
  width: 100vw;
  height: auto;
  max-height: 100svh;
  object-fit: contain;
  display: block;
}

/* Vertical Swiper */
/* Changes color of all pagination bullets*/
.swiper-pagination-bullet {
  background-color: rgba(255, 255, 255, 0.9);
  border: 1px solid rgba(178, 178, 178, 0.9);
}

/* Changes color of the active pagination bullet */
.swiper-pagination-bullet-active {
  background-color: #ffffff;
}

/* Youtube Videos */
.youtube-video-iphone-image-container {
  position: relative;
  width: 100%; /* Matches the container to the image width */
  max-width: 100vw; 
  display: flex;
  justify-content: center;
  align-items: center;
}

.youtube-landscape {
  width: 100%;
  height: auto;
  max-width: none;
  object-fit: cover;
}

.centered-video_play-icon {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 68px;
  height: 68px;
  opacity: 0.9;
  object-fit: contain;
  cursor: pointer;
}

/* Link Layout for mobile */
.link-img {
  width: 100%;
  height: auto;
  max-height: 55svh;
  object-fit: cover;
  display: block;
  position: fixed;
  /* top: 48px; */
  left: 0;
  right: 0;
  margin: 0 auto;
  z-index: 1;
}

.link-container {
  background-color: white;
  width: 100vw;
  position: relative;
  padding-left: 20px;
  margin-top: calc(55svh); 
  height: calc(100svh - 55svh); 
  overflow-y: auto;
  z-index: 0;
}

.link-title,
.link-description {
  text-align: left;
  color: black;
  padding-right: 20px;
  margin-left: 4px;
}

.link-title {
  font-weight: bold;
  letter-spacing: 0.2px;
  margin-top: 3svh;
}

.link-description {
  letter-spacing: 0.1px;
}

/* Need to use class names that Adam is already using. */
.link-clickable {
  display: block;
  text-decoration: none;
  text-transform: uppercase;
  color: #808080;
  margin-top: 20px;
  margin-left: 4px;
  margin-bottom: 16px;
  letter-spacing: 0.1px;
}

.grey_button {
  display: inline-flex;
  align-items: center;
  border: 1px solid #d6d6d6;
  padding: 6px 16px 6px 10px;
  text-decoration: none;
  color: black;
  background: linear-gradient(#ffffff, #f7f2f2);
  cursor: pointer;
  gap: 5px;
  max-width: 125px;
  width: 100%;
  white-space: nowrap;
  margin-left: 4px;
  box-sizing: border-box;
}

.button-icon {
  width: 16px;
  height: 16px;
  object-fit: contain;
}

.portrait-img {
  height: 100svh; 
  max-height: 100svh;
  width: auto;
  object-fit: cover; 
  display: block;
}

.youtube-portrait {
  max-height: 90svh;
  height: auto;
  width: auto;
  max-width: 100%;
  object-fit: contain;
  margin: 0 auto;
  /* display: block; */
}

.swiper-slide img {
  display: block;
  width: 100%;
}

/* Arrows for horizontal swiping for Navigation and Fade Swiper */
.left-arrow-btn, .right-arrow-btn {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 40px;
  height: 40px;
  background-color: rgba(0, 0, 0, 0.3);
  border-radius: 50%;
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  cursor: pointer;
  border: none;
  z-index: 10;
  transition: opacity 0.3s;
  background-size: 20px 20px; 
  background-position: center;
  background-repeat: no-repeat;
}

.left-arrow-btn {
  left: 9px;
  background-image: url(../assets/64x64_0021_left-arrow-white.png);
  background-position: calc(50% - 2px) center;
}

.right-arrow-btn {
  right: 9px;
  background-image: url("../assets/64x64_0022_right-arrow-white.png");
  background-position: calc(50% + 2px) center; /
}

/* Custom arrows for vertical swiping for Vertical Swiper */
/* Style for the navigation buttons container */
.navigation-buttons {
  position: fixed;
  bottom: 56px; 
  left: 50%;
  transform: translateX(-50%);
  display: flex;
  z-index: 100; 
}

/* Arrows for horizontal swiping for Navigation and Fade Swiper */
.up-arrow-btn, .down-arrow-btn {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 40px;
  height: 40px;
  background-color: rgba(0, 0, 0, 0.3);
  border-radius: 50%;
  cursor: pointer;
  border: none;
  z-index: 10;
  transition: opacity 0.3s;
  background-size: 20px 20px; 
  background-repeat: no-repeat;
  touch-action: manipulation;
}

.up-arrow-btn {
  position: absolute;
  left: -60px;
  background-image: url(../assets/64x64_0021_up-arrow-white.png);
  background-position: center 48%;
}

.down-arrow-btn {
  position: absolute;
  right: -60px;
  background-image: url("../assets/64x64_0022_down-arrow-white.png");
  background-position: center 58%;
}

/* Media query to adjust for wider screens (around 500px and above) */
@media (min-width: 500px) {
  .portrait-img {
    height: 100svh; /* Keep height consistent across all images */
    width: auto;
    object-fit: cover; /* Adjust to maintain aspect ratio */
    background-position: center 55%;
  }
}

/* Hide the title-row when clicking on page */
.hidden-title-row {
  display: none;
}

@media only screen and (min-width: 975px) {
  .link-main-page-container {
    display: flex;
    align-items: flex-start;
    gap: 20px;
    background-color: white;
    width: 90%;
  }

  .image-container-for-portraits-desktop-link {
    flex: 1;
  }

  .link-img {
    width: 100%;
    height: auto;
    display: block;
    object-fit: cover;
    position: initial;
    max-height: initial;
    top: initial;
    left: initial;
    right: initial;
    margin: initial;
    z-index: initial;
  }

  .link-container {
    flex: 1;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    width: initial;
    position: initial;
    padding: initial;
    padding-right: 14px;
    z-index: initial;
    margin-top: initial;
    height: initial;
    margin-left: initial;
  }
}

